# yadcc-go

./: .gitignore  Makefile  README.md  go.mod  go.sum
api/proto/yadcc/v1/: cache.proto  common.proto  daemon.proto  scheduler.proto
cmd/yadcc/: main.go
cmd/yadcc-cache/: main.go
cmd/yadcc-daemon/: main.go
cmd/yadcc-scheduler/: main.go
docs/: migration-progress.md
internal/buildinfo/: buildinfo.go
internal/cache/: bloom.go  bloom_test.go  disk.go  grpc_server.go  key.go  key_test.go  server.go  server_test.go  store.go  store_test.go
internal/client/: client.go  client_test.go
internal/compiler/: args.go  args_test.go  digest.go  preprocess.go  registry.go
internal/compress/: zstd.go
internal/daemon/: server.go  server_test.go
internal/locald/: server.go  util.go
internal/platform/: exec.go
internal/protocol/: multichunk.go  multichunk_test.go
internal/remoted/: server.go
internal/scheduler/: server.go  server_test.go
internal/taskgroup/: group.go  group_test.go
scripts/: gen-proto.sh  start-daemon.sh  start-scheduler.sh  stop-all.sh
tests/cmake_project/: CMakeLists.txt  run-cmake-test.sh
tests/cmake_project/src/: main.cpp  mathlib.c  mathlib.h  mathlib_cpp.cpp  timestamp.c
tests/integration/: integration_test.go
